--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     find an anime based on a picture.
     Search Anime by ScreenShot. Lookup the exact moment and the episode ... paste or drop image here; trace back the scene from an anime screenshot.
     Anime search engine that fetches anime info based on the image provided.">
+    <meta name="google-site-verification" content="EIW2XhCPCjMN61kVXPxI7mmSpeVpgLcgeUec4wpTujU" />
     <title>Get any Anime from Image | Search Anime by Screenshot</title>
     <link rel="stylesheet" href="style.css">
 </head>
